src/scss/sections/blocks/_portfolio-swiper.scss
.portfolio-swiper {
  &__slide.portfolio-swiper__slide {
    display: flex;
  }

  &__text-block {
    max-width: 25.9375rem;
    margin-right: 0.9375rem;
  }

  &__title {
    margin-bottom: 0.6875rem;
    color: var(--color-section-subtitle);
    font-size: 1.5625rem;
    font-style: normal;
    font-weight: 500;
    line-height: normal;
  }

  &__text-wrapper {
    position: relative;
    max-height: 15.4375rem;
    overflow-y: auto;

    /* WebKit */
    &::-webkit-scrollbar {
      width: .6rem;
    }

    &::-webkit-scrollbar-track {
      background-color: var(--color-gray-lighter-2);
      border-radius: 0.3125rem;
    }

    &::-webkit-scrollbar-thumb {
      background-color: var(--color-green-lighter);
      border-radius: 0.3125rem;
      
      &:hover {
        background-color:var(--color-green);
      }
    }

    /* Firefox */
    scrollbar-gutter: stable;
    scrollbar-width: thin;
    scrollbar-color: var(--color-green-lighter-2) var(--color-gray-lighter-2);
    scroll-behavior: smooth;
  }

  &__text {
    padding-right: 0.625rem;
  }

  &__descr {
    font-weight: 400;

    &:not(:last-child) {
      margin-bottom: 1.1875rem;
    }
  }

  &__img {
    min-width: 26.5rem;
    min-height: 31.4rem;
    object-fit: cover;
    border-radius: var(--border-radius-img);
  }

  &__pagination {
    position: absolute;
      bottom: 0.8125rem;
      left: 7rem;
      z-index: 1;
  }

  &__fraction {
    display: none;
  }

  &__number {
    font-style: normal;
    font-weight: 700;
    line-height: 90.5%;

    &:nth-child(1) {
      font-size: 5.3125rem;
      letter-spacing: 0.05313rem;
    }

    &:nth-child(3) {
      font-size: 3.125rem;
      letter-spacing: 0.03125rem;
    }
  }

  &__slash {
    margin-right: 0.75rem;
    font-size: 3.125rem;
    font-style: normal;
    font-weight: 700;
    line-height: 90.5%;
    letter-spacing: 0.03125rem;
  }

  &__prev,
  &__next {
    position: absolute;
    bottom: -6rem;
    width: 3.75rem;
    height: 3.125rem;
    z-index: 99;
    cursor: pointer;
    transition: opacity var(--transition-link);
  }

  &__prev {
    left: 4.0625rem;
    background: no-repeat center url('../images/navigation-arrow.svg');
  }

  &__next {
    left: 21.5625rem;
    background: no-repeat center url('../images/navigation-arrow.svg');
    transform: scale(-1, 1);
    will-change: transform;
  }
}

// ----- Медиа-запросы -----
@media (hover: hover) {
  .portfolio-swiper {
    &__prev {
      &:hover {
        opacity: .6;
      }
    }

    &__next {
      &:hover {
        opacity: .6;
      }
    }
  }
}

// 1024px
@include media('max', 'xl') {
  .portfolio-swiper {
    &__slide {
      flex-direction: column;
    }

    &__text-block {
      order: 2;
      max-width: 39rem;
      padding: 2rem 0;
    }

    &__img {
      width: 100%;
      min-width: auto;
      min-height: 21.875rem;
      max-height: 21.875rem;
    }

    &__prev,
    &__next {
      display: none;
    }

    &__pagination {
      position: relative;
      display: flex;
      gap: 1.25rem;
      left: auto;
      bottom: auto;
      padding-left: 3rem;
      padding-bottom: 1.1875rem;

      .swiper-pagination-bullet {
        display: block;
        width: 3.1875rem;
        height: 0.25rem;
        border-radius: 6.25rem;
        background-color: var(--color-white);

        &-active {
          background-color: var(--color-blue-darker);
        }
      }
    }

    &__fraction {
      position: absolute;
      display: flex;
      justify-content: space-between;
      bottom: 0.625rem;
      left: 0;
      width: 18.75rem;
      z-index: -1;

      &-item {
        font-size: 1.125rem;
        font-style: normal;
        font-weight: 700;
        line-height: normal;
      }
    }
  }
}

// 480px
@include media('max', 'sm') {
  .portfolio {
    .portfolio-swiper {
      &__wrapper {
        padding-bottom: 40px;
      }

      &__img {
        max-height: 16.875rem;
        min-height: 16.875rem;
      }

      &__text-wrapper {
        overflow: visible;
      }

      &__text-block {
        order: 3;
        max-height: 10rem;
        padding-top: 3.8125rem;
        padding-bottom: 0;
        margin-right: 0;
        overflow: hidden;
        transition: max-height var(--transition);
      }

      &__title {
        font-size: 1.125rem;
        font-weight: 700;
      }

      &__text {
        padding: 0;
        background-image: linear-gradient(to bottom, rgba(39, 39, 39, 1), rgba(39, 39, 39, 0) 50%);
        -webkit-background-clip: text;
        -webkit-text-fill-color: transparent;
      }

      &__descr {
        line-height: 120%;
      }

      &__pagination {
        position: absolute;
        top: 18.625rem;
        left: 50%;
        bottom: auto;
        padding: 0;
        transform:translateX(-50%);
      }

      &__fraction {
        top: 18rem;
        left: 50%;
        bottom: auto;
        max-width: 17.5rem;
        transform:translateX(-50%); 
      }
    }
  }
}

